# payment_system

./: .env  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
config/: urls.py
config/exceptions/: api_exceptions.py  custom_exceptions.py  exception_codes.py
config/settings/: base.py
payments/: models.py  serializers.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_remove_chargingpaymentrequest_approve_at_and_more.py  0003_alter_chargingpaymentrequest_order_name_and_more.py
payments/templates/payments/: window.html
tests/: test_users.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
utils/: models.py  token.py  tokens.py
